setup routes and controllers

--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,23 @@
   "name": "mern-server",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
-    "type": "module",
+    "start": "node main.js",
+    "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
+  }
 }
